@@ -2,13 +2,21 @@ xx May 2007: 0.3.9 Miek <miek@miek.nl>
   -- small fixes --
    * Add -S and -D to the known options of rdup-restore (reported by 
      Ben Coffey)
-   * Add runtime check to find mcrypt to rdup-crypt  (reported by Ben
+   * Add runtime check to find mcrypt to rdup-crypt (reported by Ben
      Coffey)
+   * Add runtime checks to rdup-gzip and rdup-gpg too
    * Documentation updates and tweaks
    * Added rdup-simple; 
    	- other calling semantics
 	- uses ~/.rdup for storing tmp files
-   * Added rdup-gpg - encrypt with gpg
+   * Added rdup-gpg - encrypt with gpg, decryption makes use of
+     gpg-agent, otherwise you need to type your passphrase for 
+     every file
+   * Force ordering of encryption and compressions. First compress
+     then encrypt; all scripts do this now. 
+   * Force ordering of decryption and decompression: First decrypt
+     then decompress.
+     
 
 
 14 Mar 2007: 0.3.8 Miek <miek@miek.nl>
